--- a/index.html
+++ b/index.html
@@ -1,61 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta charset="utf-8">
-  <title>VR prova</title>
-  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <script src="https://cdn.aframe.io/components/hand-controls/hand-controls.min.js"></script>
+    <meta charset="utf-8">
+    <title>VR prova</title>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.aframe.io/components/hand-controls/hand-controls.min.js"></script>
 
+    <script>
+      // Component for rotating the rig with the left controller joystick
+      AFRAME.registerComponent('joystick-rotation', {
+        init: function () {
+          const rig = document.querySelector('#rig');
+          this.el.addEventListener('axismove', (event) => {
+            const x = event.detail.axis[2];
+            if (Math.abs(x) > 0.1) {
+              rig.object3D.rotation.y -= x * 0.03;
+            }
+          });
+        }
+      });
 
-<script>
- // Component for rotating the rig with the left controller joystick
-    AFRAME.registerComponent('joystick-rotation', {
-      init: function () {
-        const rig = document.querySelector('#rig');
+      // Component for moving the rig with the right controller joystick
+      AFRAME.registerComponent('joystick-movement', {
+        tick: function () {
+          const rig = document.querySelector('#rig');
+          const head = document.querySelector('#head');
+          const controller = document.querySelector('#rightHand');
 
-        this.el.addEventListener('axismove', (event) => {
-          const x = event.detail.axis[2];
-          if (Math.abs(x) > 0.1) {
-            rig.object3D.rotation.y -= x * 0.03;
-          }
-        });
-      }
-    });
+          if (!controller || !controller.components['oculus-touch-controls']) return;
 
-    // Component for moving the rig with the right controller joystick
-    AFRAME.registerComponent('joystick-movement', {
-      tick: function () {
-        const rig = document.querySelector('#rig');
-        const head = document.querySelector('#head');
-        const controller = document.querySelector('#rightHand');
+          const gamepad = controller.components['oculus-touch-controls'].controller;
+          if (gamepad && gamepad.axes.length >= 4) {
+            const y = gamepad.axes[3];
+            const x = gamepad.axes[2];
 
-        if (!controller || !controller.components['tracked-controls']) return;
-
-        const gamepad = controller.components['tracked-controls'].controller;
-        if (gamepad && gamepad.axes.length >= 4) {
-          const y = gamepad.axes[3];
-          const x = gamepad.axes[2];
-
-          if (Math.abs(x) > 0.1 || Math.abs(y) > 0.1) {
-            const dir = new THREE.Vector3(x * 0.1, 0, -y * 0.1);
-            dir.applyQuaternion(head.object3D.quaternion);
-            rig.object3D.position.add(dir);
+            if (Math.abs(x) > 0.1 || Math.abs(y) > 0.1) {
+              const dir = new THREE.Vector3(x * 0.1, 0, -y * 0.1);
+              dir.applyQuaternion(head.object3D.quaternion);
+              rig.object3D.position.add(dir);
+            }
           }
         }
-      }
-    });
-  
-  </script>
-  </head> 
-  <body>          
-
-    <a-scene vr-mode-ui="enabled: true">
+      });
+    </script>
+  </head>
+  <body>
+    <a-scene vr-mode-ui="enabled: true" webxr="optionalFeatures: local-floor">
       <!-- Lighting -->
       <a-entity light="type: ambient; intensity: 0.7"></a-entity>
       <a-entity light="type: directional; intensity: 0.5" position="1 3 2"></a-entity>
-
-      <!-- Ground -->
-      <a-plane position="0 0 0" rotation="-90 0 0" width="50" height="50" color="#7BC8A4"></a-plane>
 
       <!-- Cube -->
       <a-box position="1 1 -3" depth="1" height="1" width="1" color="#4CC3D9"></a-box>
@@ -63,26 +56,26 @@
       <!-- Sphere -->
       <a-sphere position="-1 1 -3" radius="0.5" color="#EF2D5E"></a-sphere>
 
+      <!-- Ground -->
+      <a-plane position="0 0 0" rotation="-90 0 0" width="50" height="50" color="#7BC8A4"></a-plane>
+
       <!-- Camera rig -->
-      <a-entity id="rig" position="0 7 0.5" joystick-movement>
-        
+      <a-entity id="rig" position="0 1.6 0.5" joystick-movement>
         <!-- Camera (user's head) -->
-         <a-entity id="head" camera look-controls wasd-controls position="0 0 0"></a-entity>
-        
-        <!-- Right Controller (Move) -->
+        <a-entity id="head" camera look-controls wasd-controls position="0 0 0"></a-entity>
+
+        <!-- Right hand for movement -->
         <a-entity id="rightHand"
-                hand-controls="hand: right"
-                laser-controls="hand: right"
-                tracked-controls="hand: right"></a-entity>
+                  oculus-touch-controls="hand: right"
+                  joystick-movement>
+        </a-entity>
 
-        <!-- Left Controller (Rotate) -->
+        <!-- Left hand for rotation -->
         <a-entity id="leftHand"
-                hand-controls="hand: left"
-                laser-controls="hand: left"
-                tracked-controls="hand: left"
-                joystick-rotation></a-entity>
+                  oculus-touch-controls="hand: left"
+                  joystick-rotation>
+        </a-entity>
       </a-entity>
-
-  </a-scene> 
-</body> 
+    </a-scene>
+  </body>
 </html>
