--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 
         <!-- Right hand for movement -->
         <a-entity id="rightHand"
-                  oculus-touch-controls="hand: right"
-                  joystick-movement>
+          oculus-touch-controls="hand: right"
+          tracked-controls="hand: right"
+          joystick-movement>
         </a-entity>
 
         <!-- Left hand for rotation -->
