--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
         <a-entity id="head" camera look-controls wasd-controls position="0 0 0"></a-entity>
 
         <!-- Right hand for movement -->
-        <a-entity id="rightHand"
-          oculus-touch-controls="hand: right"
-          tracked-controls="hand: right"
+        <a-entity id="leftHand"
+          oculus-touch-controls="hand: left"
+          tracked-controls="hand: left"
           joystick-movement>
         </a-entity>
 
         <!-- Left hand for rotation -->
-        <a-entity id="leftHand"
-                  oculus-touch-controls="hand: left"
+        <a-entity id="rightHand"
+                  oculus-touch-controls="hand: right"
                   joystick-rotation>
         </a-entity>
       </a-entity>
